layout bug fixed

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,3 +1,11 @@
 .home {
     padding-left: 18rem;
+    padding-top: 0;
+}
+
+@media (max-width:1280px) {
+    .home--mobile {
+        padding-left: 0 !important;
+        padding-top: 70px !important;
+    }
 }
